cmake_minimum_required(VERSION 3.15)
project(01)

set(CMAKE_CXX_STANDARD 11)

add_executable(MAIN00 线性表/线性表的插入.cpp)
add_executable(MAIN01 线性表/线性表的查找.cpp)
add_executable(MAIN02 线性表/单向链表.cpp)
add_executable(MAIN03 线性表/单向循环链表.cpp)
add_executable(MAIN04 线性表/双向链表.cpp)
add_executable(MAIN05 栈和队列/栈.cpp)
add_executable(MAIN06 栈和队列/链栈.cpp)
add_executable(MAIN07 栈和队列/顺序循环队列.cpp)
add_executable(MAIN08 栈和队列/链队列.cpp)
add_executable(MAIN09 栈和队列/链队列-01.cpp)
add_executable(MAIN10 指针.cpp)
add_executable(MAIN11 线性表/单向链表-01.cpp)
add_executable(MAIN12 线性表/静态链表.cpp)
add_executable(MAIN13 线性表/静态链表-01.cpp)
add_executable(MAIN14 线性表/双向链表-01.cpp)
add_executable(MAIN15 栈和队列/两栈共享空间.cpp)
add_executable(MAIN16 栈和队列/链栈-01.cpp)
add_executable(MAIN17 杂项/斐波那契数列.cpp)
add_executable(MAIN18 栈和队列/顺序循环队列-01.cpp)
add_executable(MAIN19 栈和队列/链队列-02.cpp)
add_executable(MAIN20 串/串朴素模式匹配.cpp)
add_executable(MAIN21 树/树-孩子表示法.cpp)
add_executable(MAIN22 树/二叉树.cpp)
add_executable(MAIN23 树/线索二叉树.cpp)
add_executable(MAIN24 栈和队列/栈的应用-中缀表达式转后缀表达式.cpp)